resolved scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   font-family: outfit;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 #root {
   min-height: 100vh;
   display: flex;
